# template-tauri

./: .gitignore  .prettierignore  .prettierrc.json  Cargo.toml  README.md  eslint.config.js  package.json  pnpm-lock.yaml  prettier.config.js  rust-toolchain.toml  rustfmt.toml  tsconfig.json  vite.config.js
.github/: dependabot.yml
.husky/: pre-commit
src/: App.vue  index.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: main.json
src-tauri/src/: command.rs  database.rs  error.rs  main.rs  prelude.rs  state.rs  utils.rs
src-tauri/src/command/: mod.rs
src-tauri/src/database/: mod.rs  prelude.rs
src-tauri/src/window/: app.rs  mod.rs
src/assets/: index.css
src/events/: index.ts
src/lib/: app.ts  commands.ts  sensors.ts  theme.ts
src/router/: index.ts  routes.ts
src/utils/: command.ts  index.ts
src/views/: HomeView.vue  MainView.vue
src/windows/main/: App.vue  index.html  index.ts
src/windows/main/events/: index.ts
src/windows/main/router/: index.ts  routes.ts
src/windows/main/stores/: index.ts
src/windows/main/views/: Home.vue
types/: auto-imports.d.ts
types/autogenerated/: auto-imports.d.ts
