[workspace]
members = ["src-tauri"]
resolver = "2"

[workspace.package]
edition = "2021"
rust-version = "1.78"
publish = false

[workspace.lints.rust]
async_fn_in_trait = "allow"

[workspace.lints.clippy]
clone_on_ref_ptr = "deny"
filetype_is_file = "deny"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
module_name_repetitions = "allow"
must_use_candidate = "allow"
rc_buffer = "deny"
rc_mutex = "deny"
rest_pat_in_fully_bound_structs = "deny"
similar_names = "allow"

[workspace.lints.clippy.pedantic]
level = "deny"
priority = -1
