[package]
name = "tauri-template"
version = "0.14.1"
publish = false

[package.edition]
workspace = true

[package.rust-version]
workspace = true

[build-dependencies.tauri-build]
version = "2.0.0-beta.18"
features = []

[dependencies]
anyhow = "1.0.86"
chrono = "0.4.38"
futures = "0.3.30"
itertools = "0.13.0"
serde_json = "1.0.120"
tauri-plugin-dialog = "2.0.0-beta.10"
tauri-plugin-manatsu = "0.12.2"
tauri-plugin-prevent-default = "0.1.5"
tauri-plugin-single-instance = "2.0.0-beta.10"
tauri-plugin-store = "2.0.0-beta.9"
tauri-plugin-window-state = "2.0.0-beta.10"
thiserror = "1.0.61"

[dependencies.sea-orm]
version = "0.12.15"
features = ["macros", "runtime-tokio-rustls", "sqlx-sqlite"]

[dependencies.sea-query]
version = "0.30.7"
default-features = false
features = ["backend-sqlite", "thread-safe"]

[dependencies.serde]
version = "1.0.203"
features = ["derive"]

[dependencies.strum]
version = "0.26.3"
features = ["derive"]

[dependencies.tauri]
version = "2.0.0-beta.23"
features = ["rustls-tls"]

[dependencies.tauri-plugin-http]
version = "2.0.0-beta.11"
features = ["rustls-tls"]

[dependencies.tokio]
version = "1.38.0"
features = ["full"]

[dependencies.tracing]
version = "0.1.40"
features = ["release_max_level_off"]

[dependencies.tracing-appender]
version = "0.2.3"
features = ["parking_lot"]

[dependencies.tracing-subscriber]
version = "0.3.18"
features = ["chrono", "env-filter", "fmt", "parking_lot", "registry"]
