[package]
name = "tauri-template"
version = "0.16.3"
publish = false

[package.edition]
workspace = true

[package.rust-version]
workspace = true

[build-dependencies.tauri-build]
version = "2.0.0-beta.19"
features = []

[dependencies]
anyhow = "1.0.86"
chrono = "0.4.38"
futures = "0.3.30"
itertools = "0.13.0"
serde_json = "1.0.120"
tauri-plugin-dialog = "2.0.0-beta.11"
tauri-plugin-manatsu = "0.14.0"
tauri-plugin-single-instance = "2.0.0-beta.11"
tauri-plugin-window-state = "2.0.0-beta.11"
thiserror = "1.0.63"

[dependencies.serde]
version = "1.0.204"
features = ["derive"]

[dependencies.strum]
version = "0.26.3"
features = ["derive"]

[dependencies.tauri]
version = "2.0.0-beta.24"
features = ["rustls-tls"]

[dependencies.tauri-plugin-http]
version = "2.0.0-beta.12"
features = ["rustls-tls"]

[dependencies.tauri-plugin-pinia]
version = "0.2"
features = ["ahash"]

[dependencies.tauri-plugin-prevent-default]
version = "0.2"
features = ["ahash"]

[dependencies.tokio]
version = "1.39.2"
features = ["full"]

[features]
open-devtools = ["tauri/devtools"]
